--- a/index.html
+++ b/index.html
@@ -1,35 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="stylesheet" href="main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kumbh+Sans">
   
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <div class="profile-card">
+      <div class="profile-picture">
+        <img src="images/image-victor.jpg">
+      </div>
+      <div class="who-is-it">
+        <div class="identity">
+          <div>Victor Crest</div>
+          <div>26</div>
+        </div>
+        <div class="city">London</div>
+      </div>
+      <div class="social-network">
+        <div class="information-network">
+          <div class="count">80K</div>
+          <div class="title">Followers</div>
+        </div>
+        <div class="information-network">
+          <div class="count">803K</div>
+          <div class="title">Likes</div>
+        </div>
+        <div class="information-network">
+          <div class="count">1.4K</div>
+          <div class="title">Photos</div>
+        </div>
+      </div>
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/GNDev8">GNDev8</a>.
+    </div>
   </div>
 </body>
 </html>
