--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="profile-card">
       <div class="profile-picture">
-        <img src="images/image-victor.jpg">
+        <img src="images/image-victor.jpg" alt="profile picture">
       </div>
       <div class="who-is-it">
         <div class="identity">
